--- a/IELTS/100句学完7000雅思单词新版.md
+++ b/IELTS/100句学完7000雅思单词新版.md
@@ -7,3 +7,17 @@ The two World Wars, which **interupted** the supply of **raw** material from Jap
 One way is by **organing** **backstage** tours, so people can be **shown around** the building and learn how a **theater** **operates**.
 
 What I'm **afraid** will **happen** is that books and **magazines** will all **disappear**, and there'll just be **rows** and rows of computers.
+
+
+
+The **psychological** **laboratory** has a strong **claim** to **legitimacy** and **evokes** **trust** and confidence in who perform there.
+
+The **displays** of art museums serve as a **warning** of what critical practices can **emerge** when **spontaneous** **criticism** is **suppressed**.
+
+**Vertical** farming is an **attempt** to **address** the **undoubted** problems that we **face** in **producing** enough food for a growing population.
+
+It was not until 1500 BC, that the first **hollow** **container** was made by **covering** a sand core with a **layer** of **molten** glass.
+
+Many **theorists** believe that the **ideal** boss should lead from behind, taking **pride** in **collective** **accomplishment** and giving **credit** where it is due.
+
+
