--- a/IELTS/100句学完7000雅思单词新版.md
+++ b/IELTS/100句学完7000雅思单词新版.md
@@ -22,3 +22,15 @@
 - Many **theorists** believe that the **ideal** boss should lead from behind, taking **pride** in **collective** **accomplishment** and giving **credit** where it is due.
 
 
+##### 11-15
+
+Though we might **think of** film as an **essentially** **visual** **experience**, we really cannot **afford** to **underestimate** the **importance** of film sound.
+
+As far as goods **transport** is **concerned**, growth is **due** to a large **extent** to changes in European economy and its system of production.
+
+In order to **track** **temporal** hours during the day, **inventors** created **sundials**, which indicate time by the **length** or **direction** of the sun's shadow.
+
+Lee Hall's **analysis** of **figures** comparing the times of fires and the **proportion** of **seed** that **germinated** was done in a lot of **detail** -- very **impressive**.
+
+While the **Inuit** may not **actually** **starve** if hunting and trapping are **curtailed** by **climate** change, there has a **certainly** **impact** on people's health.
+
