--- a/IELTS/100句学完7000雅思单词新版.md
+++ b/IELTS/100句学完7000雅思单词新版.md
@@ -1,36 +1,32 @@
 ##### 1 - 5
+
 - There is **considerable** **debate** over how we should react if we **detect** a signal from an **alien** **civilisation**.
-
 - The two World Wars, which **interupted** the supply of **raw** material from Japan,also **stifled** the European **silk** **industry**.
-
 - **Migration** is a complex **issue**, and **biologists** define it differently, depending **in part** on what **sorts** of animals they study.
-
 - One way is by **organing** **backstage** tours, so people can be **shown around** the building and learn how a **theater** **operates**.
-
 - What I'm **afraid** will **happen** is that books and **magazines** will all **disappear**, and there'll just be **rows** and rows of computers.
 
-
 ##### 6 - 10
+
 - The **psychological** **laboratory** has a strong **claim** to **legitimacy** and **evokes** **trust** and confidence in who perform there.
-
 - The **displays** of art museums serve as a **warning** of what critical practices can **emerge** when **spontaneous** **criticism** is **suppressed**.
-
 - **Vertical** farming is an **attempt** to **address** the **undoubted** problems that we **face** in **producing** enough food for a growing population.
-
 - It was not until 1500 BC, that the first **hollow** **container** was made by **covering** a sand core with a **layer** of **molten** glass.
-
 - Many **theorists** believe that the **ideal** boss should lead from behind, taking **pride** in **collective** **accomplishment** and giving **credit** where it is due.
-
 
 ##### 11-15
 
-Though we might **think of** film as an **essentially** **visual** **experience**, we really cannot **afford** to **underestimate** the **importance** of film sound.
+- Though we might **think of** film as an **essentially** **visual** **experience**, we really cannot **afford** to **underestimate** the **importance** of film sound.
+- As far as goods **transport** is **concerned**, growth is **due** to a large **extent** to changes in European economy and its system of production.
+- In order to **track** **temporal** hours during the day, **inventors** created **sundials**, which indicate time by the **length** or **direction** of the sun's shadow.
+- Lee Hall's **analysis** of **figures** comparing the times of fires and the **proportion** of **seed** that **germinated** was done in a lot of **detail** -- very **impressive**.
+- While the **Inuit** may not **actually** **starve** if hunting and trapping are **curtailed** by **climate** change, there has a **certainly** **impact** on people's health.
 
-As far as goods **transport** is **concerned**, growth is **due** to a large **extent** to changes in European economy and its system of production.
+##### 15-20
 
-In order to **track** **temporal** hours during the day, **inventors** created **sundials**, which indicate time by the **length** or **direction** of the sun's shadow.
-
-Lee Hall's **analysis** of **figures** comparing the times of fires and the **proportion** of **seed** that **germinated** was done in a lot of **detail** -- very **impressive**.
-
-While the **Inuit** may not **actually** **starve** if hunting and trapping are **curtailed** by **climate** change, there has a **certainly** **impact** on people's health.
+- It would seem that the brain sees those **images** as **puzzles**, and the harder it is to **decipher** the meaning, the more **rewarding** is the moment of **recognition**.
+- Such **materials**, even where it **appears** **comparatively** **trivial**, can have a serious effect on the company, **supplier** and **customer** if it falls into the wrong hands.
+- It the glass were kept hot enough, it would flow over the molten **tin** until the top **surface** was also flat, horizontal and perfectly **parallel** to the bottom surface.
+- It was once **assumed** that **improvements** in **telecommunications** would lead to more **dispersal** in the population as people were **no longer** **forced** into the city.
+- Compare to language, all other **inventions** **pale** in **significance**, **since** everything we have **achieved** **depends on** language and **originates** from it.
 
