add from 21 through 25

--- a/IELTS/100句学完7000雅思单词新版.md
+++ b/IELTS/100句学完7000雅思单词新版.md
@@ -30,3 +30,15 @@
 - It was once **assumed** that **improvements** in **telecommunications** would lead to more **dispersal** in the population as people were **no longer** **forced** into the city.
 - Compare to language, all other **inventions** **pale** in **significance**, **since** everything we have **achieved** **depends on** language and **originates** from it.
 
+##### 21-25
+
+It's true there are new **regulations** for **mercury** **emissions** from power plants, but these will need billions of dollars to **implement** and increase cost for everyone.
+
+The teachers' **task** is to assist the students to **apply** what they have learned paraconsciously, and in doing so to make it easily **accessible** to **consciousness**.
+
+However, if one of the parties in a **conflict** sees human resources as simply a **mouthpiece** of the chief **executive**, then an **external** **mediator** might be able to help.
+
+Summer leaves are green because they are full of **chlorophyll**, the **molecule** that **captures** the sunlight and **converts** that energy into a new building materials for the tree.
+
+If **clothing** fails to meet these **standards**, as **determined** by the **employee's** **supervisor**, the employee will be asked not to wear **inappropriate** **item** to work again.
+
