--- a/IELTS/100句学完7000雅思单词新版.md
+++ b/IELTS/100句学完7000雅思单词新版.md
@@ -42,3 +42,11 @@ Summer leaves are green because they are full of **chlorophyll**, the **molecule
 
 If **clothing** fails to meet these **standards**, as **determined** by the **employee's** **supervisor**, the employee will be asked not to wear **inappropriate** **item** to work again.
 
+##### 26-30
+
+- The **participants** weren't told **beforehand** whether **tunes** were **composed** by human or computers, but were asked to **guess** and  then **rate** how much they liked each one.
+- If **identical** twins are more similar to each other with respect to an **aliment** than **fraternal** twins are, then **vulnerability** to the disease must be rooted at least in part in **heredity**.
+
+- Finally, **perhaps** the most **graphic** **expressions** of **self-awareness** **in general** can be seen in the displays of **rage** which are most common from 18 months to 3 years of age. 
+- If we can understand how **geography** can **affect** us no matter where in the world we are located, we can better treat disease, **prevent** illness, and keep people safe and well.
+- **Similarly**, people who **collect** dolls may go beyond simply **enlarging** their collection, and **develop** an **interest** in the way that dolls are mode ,or the materials are used.
