--- a/IELTS/100句学完7000雅思单词新版.md
+++ b/IELTS/100句学完7000雅思单词新版.md
@@ -32,15 +32,11 @@
 
 ##### 21-25
 
-It's true there are new **regulations** for **mercury** **emissions** from power plants, but these will need billions of dollars to **implement** and increase cost for everyone.
-
-The teachers' **task** is to assist the students to **apply** what they have learned paraconsciously, and in doing so to make it easily **accessible** to **consciousness**.
-
-However, if one of the parties in a **conflict** sees human resources as simply a **mouthpiece** of the chief **executive**, then an **external** **mediator** might be able to help.
-
-Summer leaves are green because they are full of **chlorophyll**, the **molecule** that **captures** the sunlight and **converts** that energy into a new building materials for the tree.
-
-If **clothing** fails to meet these **standards**, as **determined** by the **employee's** **supervisor**, the employee will be asked not to wear **inappropriate** **item** to work again.
+- It's true there are new **regulations** for **mercury** **emissions** from power plants, but these will need billions of dollars to **implement** and increase cost for everyone.
+- The teachers' **task** is to assist the students to **apply** what they have learned paraconsciously, and in doing so to make it easily **accessible** to **consciousness**.
+- However, if one of the parties in a **conflict** sees human resources as simply a **mouthpiece** of the chief **executive**, then an **external** **mediator** might be able to help.
+- Summer leaves are green because they are full of **chlorophyll**, the **molecule** that **captures** the sunlight and **converts** that energy into a new building materials for the tree.
+- If **clothing** fails to meet these **standards**, as **determined** by the **employee's** **supervisor**, the employee will be asked not to wear **inappropriate** **item** to work again.
 
 ##### 26-30
 
@@ -50,3 +46,4 @@ If **clothing** fails to meet these **standards**, as **determined** by the **em
 - Finally, **perhaps** the most **graphic** **expressions** of **self-awareness** **in general** can be seen in the displays of **rage** which are most common from 18 months to 3 years of age. 
 - If we can understand how **geography** can **affect** us no matter where in the world we are located, we can better treat disease, **prevent** illness, and keep people safe and well.
 - **Similarly**, people who **collect** dolls may go beyond simply **enlarging** their collection, and **develop** an **interest** in the way that dolls are mode ,or the materials are used.
+
